--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,11 +1,10 @@
 {
-  "name": "Python 3",
+  "name": "Resume Flow",
   // Or use a Dockerfile or Docker Compose file. More info: https://containers.dev/guide/dockerfile
   "image": "mcr.microsoft.com/devcontainers/python:1-3.11-bullseye",
   "customizations": {
     "codespaces": {
       "openFiles": [
-        "README.md",
         "web_app.py"
       ]
     },
@@ -27,6 +26,8 @@
       "onAutoForward": "openPreview"
     }
   },
+  "workspaceMount": "source=/data/resume-system/resume-flow,target=/workspace,type=bind,consistency=cached",
+  "workspaceFolder": "/workspace",
   "forwardPorts": [
     8501
   ]
